[package]
name = "turbomcp-websocket"
version = "3.0.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
description = "WebSocket transport implementation for TurboMCP SDK"
repository = "https://github.com/ArcadeLabsInc/turbomcp"
documentation = "https://docs.rs/turbomcp-websocket"
keywords = ["mcp", "websocket", "transport", "bidirectional", "elicitation"]
categories = ["network-programming", "asynchronous", "web-programming::websocket"]
readme = "README.md"

[features]
default = []
# MCP draft specification feature passthroughs
mcp-sampling-tools = ["turbomcp-protocol/mcp-sampling-tools"]

[dependencies]
# Core dependencies
turbomcp-transport-traits = { version = "3.0.0", path = "../turbomcp-transport-traits" }
turbomcp-protocol = { version = "2.3.7", path = "../turbomcp-protocol" }

# Async runtime
tokio = { version = "1.43", features = ["sync", "rt", "time", "net"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
async-trait = "0.1"
futures = { version = "0.3", default-features = false, features = ["std"] }

# Data structures
bytes = "1.10"
dashmap = "6.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.16", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
tracing = "0.1"
fastrand = "2.3"

[dev-dependencies]
tokio = { version = "1.43", features = ["full"] }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = "warn"
