[package]
name = "turbomcp-websocket"
version = "3.0.0-beta.4"
edition = "2024"
rust-version = "1.89.0"
authors = ["Nicholas Paterno <nick@epistates.com>"]
license = "MIT"
description = "WebSocket transport implementation for TurboMCP SDK"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"
documentation = "https://docs.rs/turbomcp-websocket"
keywords = ["mcp", "websocket", "transport", "bidirectional", "elicitation"]
categories = ["network-programming", "asynchronous", "web-programming"]
readme = "README.md"

[features]
default = []
# Experimental features pass-through
experimental-tasks = ["turbomcp-protocol/experimental-tasks"]

[dependencies]
# Core dependencies
turbomcp-transport-traits = { version = "3.0.0-beta.4", path = "../turbomcp-transport-traits" }
turbomcp-protocol = { version = "3.0.0-beta.4", path = "../turbomcp-protocol" }

# Async runtime
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Data structures
bytes = { workspace = true }
dashmap = { workspace = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.16", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
tracing = "0.1"
fastrand = "2.3"

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
