[package]
name = "turbomcp-wire"
version = "3.0.0-beta.5"
edition = "2024"
rust-version = "1.89.0"
description = "Wire format codec abstraction for TurboMCP - JSON-RPC encoding/decoding"
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
keywords = ["mcp", "wire", "codec", "json-rpc", "serialization"]
categories = ["encoding", "network-programming"]
readme = "README.md"

[dependencies]
# Core types
turbomcp-core = { workspace = true, default-features = false }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# Optional: High-performance JSON (SIMD-accelerated)
sonic-rs = { workspace = true, optional = true }

# Optional: Binary formats
rmp-serde = { version = "1.3", optional = true }  # MessagePack

# Error handling (no_std compatible)
thiserror = { workspace = true, optional = true }

# Logging (optional, std only)
tracing = { workspace = true, optional = true }

[features]
default = ["std", "json"]
std = ["serde/std", "serde_json/std", "thiserror", "tracing"]
json = []
simd = ["sonic-rs"]
msgpack = ["rmp-serde"]
full = ["std", "json", "simd", "msgpack"]

[dev-dependencies]
tokio = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
