[package]
name = "turbomcp"
version = "3.0.0-beta.4"
edition = "2024"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "Rust SDK for Model Context Protocol (MCP) with zero-boilerplate macros and WASM support"
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"
documentation = "https://docs.rs/turbomcp"
readme = "README.md"
keywords = ["mcp", "protocol", "sdk", "llm", "ai"]
categories = ["development-tools", "network-programming", "asynchronous", "web-programming"]
rust-version = "1.89.0"

[lints]
workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"

# HTTP framework (optional)
axum = { workspace = true, optional = true }
tower = { workspace = true }

# Schema generation (always required by macros)
schemars = { version = "1.0", features = ["chrono04", "uuid1"] }
uuid = { version = "1.10", features = ["v4", "v7", "serde"] }

# Internal dependencies
turbomcp-core = { version = "3.0.0-beta.4", path = "../turbomcp-core" }
turbomcp-types = { version = "3.0.0-beta.4", path = "../turbomcp-types" }
turbomcp-protocol = { version = "3.0.0-beta.4", path = "../turbomcp-protocol", default-features = false }
turbomcp-transport = { version = "3.0.0-beta.4", path = "../turbomcp-transport", default-features = false }
turbomcp-server = { version = "3.0.0-beta.4", path = "../turbomcp-server", default-features = false }
turbomcp-macros = { version = "3.0.0-beta.4", path = "../turbomcp-macros", default-features = false }

# Optional dependencies
turbomcp-client = { version = "3.0.0-beta.4", path = "../turbomcp-client", optional = true, default-features = false }
turbomcp-auth = { version = "3.0.0-beta.4", path = "../turbomcp-auth", optional = true }
turbomcp-dpop = { version = "3.0.0-beta.4", path = "../turbomcp-dpop", optional = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3.0"
proptest = "1.5"
serial_test = "3.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"

# ============================================================================
# Examples
# ============================================================================

[[example]]
name = "hello_world"
required-features = ["stdio"]

[[example]]
name = "macro_server"
required-features = ["stdio"]

[[example]]
name = "calculator"
required-features = ["stdio"]

[[example]]
name = "stateful"
required-features = ["stdio"]

[[example]]
name = "validation"
required-features = ["stdio"]

[[example]]
name = "tcp_client"
required-features = ["tcp"]

[[example]]
name = "tcp_server"
required-features = ["tcp"]

[[example]]
name = "unix_client"
required-features = ["unix"]

[[example]]
name = "transports_demo"
required-features = ["stdio", "http", "tcp"]

[[example]]
name = "type_state_builders_demo"

[[example]]
name = "tags_versioning"
required-features = ["stdio"]

[[example]]
name = "visibility"

[[example]]
name = "composition"

[[example]]
name = "middleware"

[[example]]
name = "test_client"

# ============================================================================
# Features
# ============================================================================

[features]
default = ["stdio"]

# Feature bundles
minimal = ["stdio"]
full = ["stdio", "http", "websocket", "tcp", "unix"]
full-stack = ["full", "full-client"]

# Transport features
stdio = ["turbomcp-transport/stdio", "turbomcp-server/stdio"]
http = [
    "turbomcp-transport/http",
    "turbomcp-server/http",
    "turbomcp-macros/http",
    "dep:axum",
]
websocket = ["turbomcp-transport/websocket", "turbomcp-server/websocket"]
tcp = ["turbomcp-transport/tcp", "turbomcp-server/tcp", "turbomcp-macros/tcp"]
unix = ["turbomcp-transport/unix", "turbomcp-server/unix", "turbomcp-macros/unix"]

# Optional features
auth = ["dep:turbomcp-auth"]
dpop = ["dep:turbomcp-dpop", "auth", "turbomcp-auth/dpop"]
# Client integration - minimal client with stdio only
client-integration = ["dep:turbomcp-client", "turbomcp-client/stdio"]
# Full client - enables all transport features for the client (includes client-integration)
full-client = [
    "client-integration",
    "turbomcp-client/http",
    "turbomcp-client/websocket",
    "turbomcp-client/tcp",
    "turbomcp-client/unix",
]

# Convenience aliases
all-transports = ["stdio", "http", "websocket", "tcp", "unix"]

[package.metadata.docs.rs]
features = ["full"]
rustdoc-args = ["--cfg", "docsrs"]
